--- a/Web/Views/Claim/Edit2.cshtml
+++ b/Web/Views/Claim/Edit2.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Edit2";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Back.cshtml";
 }
 
 <h2>Probléme résolu?</h2>
@@ -104,12 +104,12 @@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Confirmer la resolution" class="btn btn-success" /> <a href="~/Claim/Index"> <input type="button" value="Retour" class="btn btn-dark" /></a>
+                    <input type="submit" value="Confirmer la resolution" class="btn btn-success" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="~/Claim/Index"> <input type="button" value="Retour" class="btn btn-dark" /></a>
                 </div>
             </div>
         </div>
     }
 
-    <div>
+    @*<div>
         @Html.ActionLink("Back to List", "Index")
-    </div>
+    </div>*@
