--- a/Web/Views/Claim/Edit.cshtml
+++ b/Web/Views/Claim/Edit.cshtml
@@ -2,17 +2,16 @@
 
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Back.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Editer Une  réclamation</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>reclamation</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ReclmationID)
