--- a/Web/Views/Claim/Index.cshtml
+++ b/Web/Views/Claim/Index.cshtml
@@ -2,11 +2,13 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Back.cshtml";
 }
 
 <h2>Liste des Reclamations</h2>
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+<link hhref="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
     .search-panel {
         position: center;
@@ -27,104 +29,111 @@
 </p>
 
 <br />
+<br />
+<br />
 @using (Html.BeginForm())
 {
-<div class="search-panel">
+
+<div class="container">
     <div class="row">
-        <div> Matricule : </div>
-    </div>
-    <br />
-    <div class="row">
-        <div>
-            @Html.TextBox("searchstring")
-            
+        <div class="col">
+
         </div>
-    </div>
-    <br />
-    <div class="row">
-        <div>
-            <input type="submit" value="Rechercher" id="submit" /> <i class="fa fa-search"></i>
+        <div class="col">
+
+        </div>
+        <div class="col">
+
+        </div>
+        <div class="col">
+            @Html.TextBox("searchstring")
+            <button type="submit"><i class="fa fa-search"></i></button>
+        </div>
+        <div class="col">
+            @*<input type="submit" value="Rechercher" id="submit" /> <i class="fa fa-search"></i>*@
+
         </div>
     </div>
 </div>
 
-}
-<br />
-<br />
-<table class="table table-hover dataTable  table-striped table-responsive">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ReclmationID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.titreclaim)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.descp)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.fich)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.reponse)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.comment)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.statut)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.dateopen)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.evaluation_id)
-        </th>
-        <th></th>
-    </tr>
 
-    @foreach (var item in Model)
-    {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ReclmationID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.titreclaim)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.comment)
-        </td>
-        <td>
-            <img src="~/Content/upload/@Html.DisplayFor(modelItem => item.fich)" style="width: 50px;height: 50px" />
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.reponse)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.comment)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.statut)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.dateopen)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.evaluation_id)
-        </td>
-        <td>
-            <button class="btn btn-dark"><i class="fa fa-edit"></i> @Html.ActionLink("Réouvrir", "Edit", new { id = item.ReclmationID })</button>
-            <button class="btn btn-warning"> @Html.ActionLink("Colture", "Edit2", new { id = item.ReclmationID, Style = "color:White;" }) </button>
-        </td>
-    </tr>
-    }
+        }
+        <br />
+        <br />
+        <table class="table table-hover dataTable  table-striped table-responsive">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.ReclmationID)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.titreclaim)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.descp)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.fich)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.reponse)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.comment)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.statut)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.dateopen)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.evaluation_id)
+                </th>
+                <th></th>
+            </tr>
 
-</table>
-@*<link rel="stylesheet" href="//cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css" />
-<script src="https://code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script>
-<script src="//cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
-<script>
-    $(document).ready(function () {
-        $('.table').dataTable();
-    });</script>*@
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ReclmationID)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.titreclaim)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.comment)
+                    </td>
+                    <td>
+                        <img src="~/Content/upload/@Html.DisplayFor(modelItem => item.fich)" style="width: 50px;height: 50px" />
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.reponse)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.comment)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.statut)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.dateopen)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.evaluation_id)
+                    </td>
+                    <td>
+                        <button class="btn btn-dark"><i class="fa fa-edit"></i> @Html.ActionLink("Réouvrir", "Edit", new { id = item.ReclmationID })</button>
+                        <button class="btn btn-warning"> @Html.ActionLink("Colture", "Edit2", new { id = item.ReclmationID, Style = "color:White;" }) </button>
+                    </td>
+                </tr>
+            }
+
+        </table>
+        @*<link rel="stylesheet" href="//cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css" />
+        <script src="https://code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script>
+        <script src="//cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+        <script>
+            $(document).ready(function () {
+                $('.table').dataTable();
+            });</script>*@
