--- a/Web/Views/ClaimManager/Edit.cshtml
+++ b/Web/Views/ClaimManager/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_myLayout.cshtml";
 }
 
 <h2>Edit</h2>
